# TreeRAG

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: access_cases.json  appendix_cases.json  comparison_cases.json  corpus_comparison_cases.json  jira_cases.json  operations_corpus_cases.json  paraphrase_cases.json  runbook_corpus_cases.json
docs/: audit.md  manual-qa.md  validation-roadmap.md
docs/releases/: v0.2.0.md
examples/: access_management_runbook.md  critical_outage_updates.md  finance_appendix_report.md  jira_runbook.md  noisy_finance_report.md  oncall_handbook.md  oncall_handbook_compare.md
results/gemini/2026-04-03/: .gitignore  README.md  noisy_finance_compare.json
src/treerag/: __init__.py  api.py  benchmark.py  cache.py  cli.py  config.py  corpus.py  errors.py  indexer.py  models.py  parser.py  provider.py  retrieval.py  storage.py
tests/: test_api_cli.py  test_benchmark.py  test_corpus.py  test_parser_and_indexer.py  test_provider.py  test_retrieval.py  test_storage.py
tests/reference/: test_reference_behaviour.py
tests/support/: __init__.py  fake_provider.py
